# pytrendseries

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  README.md  __init__.py  coverage.yml  detecttrend.py  example.py  maxtrend.py  pyproject.toml  requirements.txt  setup.py  time_under_water.py  version.py  vizplot.py
detectTrend/: .coveragerc  .travis.yml  __init__.py  detectTrend.py
detectTrend/.github/workflows/: pythonpackage.yml
detecttrend/: __init__.py  detectTrend.py
detecttrend/.github/workflow/: pythonpackage.yml
src/pytrendseries/: __init__.py  current_drawdown.py  detecttrend.py  maximum_drawdown.py  time_under_water.py  version.py  vizplot.py
tests/: .gitignore  test_detectTrend.py  test_detecttrend.py
tests/resource/: __init__.py  stock_prices.csv
