[tool.poetry]
name = "pytrendseries"
version = "0.1.9"
description = "Detect trend in timeseries."
readme = "README_pypi.md"
authors = ["Rafael Rodrigues <rafael.rafarod@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
tqdm = "^4.60.0"
pytest = "^6.2.4"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"