[tool.poetry]
name = "pytrendseries"
version = "0.1.10"
description = "Detect trend in timeseries."
authors = ["Rafael Rodrigues"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = [
    {version = "<=1.5.3", python = "<=3.9"},
    {version = ">=2.2.3", python = ">=3.10"}
]
tqdm = "^4.60.0"
matplotlib = [
    {version = "<=3.7.1", python = "<=3.9"},
    {version = ">=3.10.0", python = ">=3.10"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"