[tool.poetry]
name = "pytrendseries"
version = "0.1.11"
description = "Trend detection in time series for risk management, drawdown analysis, and machine learning classification models."
authors = ["Rafael Rodrigues rafael.rafarod@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rafa-rod/pytrendseries"
homepage = "https://github.com/rafa-rod/pytrendseries"
keywords = ["time-series", "trends", "data-analysis", "timeseries", "finance",
            "machine-learning", "quant", "quantitative-finance", "drawdown",
            "time-under-water", "drawdown-at-risk", "maximum-drawdown",
            "maximum-drawdown-at-risk", "classification-model", "downtrend",
            "uptrend", "trends-detected", "timeunderwater", "tuw", "current-drawdown"]
packages = [
    { include = "pytrendseries", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = [
    {version = "<=1.5.3", python = "<=3.9"},
    {version = ">=2.2.3", python = ">=3.10"}
]
tqdm = "^4.60.0"
matplotlib = [
    {version = "<=3.7.1", python = "<=3.9"},
    {version = ">=3.10.0", python = ">=3.10"}
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0,<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
